@@ -23,6 +23,7 @@
 #include <grub/err.h>
 #include <grub/misc.h>
 #include <grub/raid.h>
+#include <grub/partition.h>
 #ifdef GRUB_UTIL
 #include <grub/util/misc.h>
 #endif
@@ -119,7 +120,11 @@ scan_devices (const char *arname)
 	  struct grub_raid_member *m;
 	  for (m = arr->members; m < arr->members + arr->nr_devs; m++)
 	    if (m->device && m->device->id == disk->id
-		&& m->device->dev->id == m->device->dev->id)
+		&& m->device->dev->id == m->device->dev->id
+		&& grub_partition_get_start (m->device->partition)
+		== grub_partition_get_start (disk->partition)
+		&& grub_partition_get_len (m->device->partition)
+		== grub_partition_get_len (disk->partition))
 	      {
 		grub_disk_close (disk);
 		return 0;
